[gd_scene load_steps=134 format=3 uid="uid://b0n80e8e6ax8v"]

[ext_resource type="Texture2D" uid="uid://c3bcl7ei0eb8k" path="res://Assets/Sprites/Tema5/block05hit.png" id="1"]
[ext_resource type="Script" path="res://Scripts/Block.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://dd3msqpnm8hb1" path="res://Assets/Sprites/Tema1/block01break.png" id="3"]
[ext_resource type="Texture2D" uid="uid://bwdu02xtjx3qg" path="res://Assets/Sprites/Tema3/block03hit2.png" id="4"]
[ext_resource type="Texture2D" uid="uid://b747mcpgmgwi" path="res://Assets/Sprites/Tema5/block05break.png" id="5"]
[ext_resource type="Texture2D" uid="uid://rrd6n8v7ejb3" path="res://Assets/Sprites/Tema3/block03break.png" id="6"]
[ext_resource type="Texture2D" uid="uid://dhrxs2a8xiahu" path="res://Assets/Sprites/Tema3/block03hit.png" id="7"]
[ext_resource type="Texture2D" uid="uid://ckx1ombv2r6m7" path="res://Assets/Sprites/Tema0/block-0.png" id="8"]
[ext_resource type="Texture2D" uid="uid://6xcxd661eqa" path="res://Assets/Sprites/Tema2/block02hit2.png" id="9"]
[ext_resource type="Texture2D" uid="uid://crap3vdpagcfs" path="res://Assets/Sprites/Tema2/block02break.png" id="10"]
[ext_resource type="Texture2D" uid="uid://d0frmkv8ryx55" path="res://Assets/Sprites/Tema4/block04hit.png" id="11"]
[ext_resource type="Texture2D" uid="uid://clxg6uv4qr3lv" path="res://Assets/Sprites/Tema4/block04break.png" id="12"]
[ext_resource type="Texture2D" uid="uid://xx3y107ao024" path="res://Assets/Sprites/Tema1/block01hit2.png" id="13"]
[ext_resource type="Texture2D" uid="uid://dwm1we8hce4eu" path="res://Assets/Sprites/Tema1/block01hit.png" id="14"]
[ext_resource type="Texture2D" uid="uid://dyqdnwq8rssue" path="res://Assets/Sprites/Tema2/block02hit.png" id="15"]
[ext_resource type="Texture2D" uid="uid://cfh2l721rikrp" path="res://Assets/Sprites/Tema4/block04hit2.png" id="16"]
[ext_resource type="Texture2D" uid="uid://epjeru6iac46" path="res://Assets/Sprites/Tema5/block05hit2.png" id="17"]

[sub_resource type="AtlasTexture" id="28"]
atlas = ExtResource("14")
region = Rect2(0, 0, 70, 70)

[sub_resource type="AtlasTexture" id="29"]
atlas = ExtResource("14")
region = Rect2(70, 0, 70, 70)

[sub_resource type="AtlasTexture" id="30"]
atlas = ExtResource("14")
region = Rect2(140, 0, 70, 70)

[sub_resource type="AtlasTexture" id="31"]
atlas = ExtResource("14")
region = Rect2(210, 0, 70, 70)

[sub_resource type="AtlasTexture" id="32"]
atlas = ExtResource("14")
region = Rect2(280, 0, 70, 70)

[sub_resource type="AtlasTexture" id="33"]
atlas = ExtResource("14")
region = Rect2(350, 0, 70, 70)

[sub_resource type="AtlasTexture" id="34"]
atlas = ExtResource("14")
region = Rect2(420, 0, 70, 70)

[sub_resource type="AtlasTexture" id="43"]
atlas = ExtResource("13")
region = Rect2(0, 0, 70, 70)

[sub_resource type="AtlasTexture" id="44"]
atlas = ExtResource("13")
region = Rect2(70, 0, 70, 70)

[sub_resource type="AtlasTexture" id="45"]
atlas = ExtResource("13")
region = Rect2(140, 0, 70, 70)

[sub_resource type="AtlasTexture" id="46"]
atlas = ExtResource("13")
region = Rect2(210, 0, 70, 70)

[sub_resource type="AtlasTexture" id="47"]
atlas = ExtResource("13")
region = Rect2(280, 0, 70, 70)

[sub_resource type="AtlasTexture" id="48"]
atlas = ExtResource("13")
region = Rect2(350, 0, 70, 70)

[sub_resource type="AtlasTexture" id="49"]
atlas = ExtResource("13")
region = Rect2(420, 0, 70, 70)

[sub_resource type="AtlasTexture" id="50"]
atlas = ExtResource("13")
region = Rect2(490, 0, 70, 70)

[sub_resource type="AtlasTexture" id="51"]
atlas = ExtResource("13")
region = Rect2(560, 0, 70, 70)

[sub_resource type="AtlasTexture" id="77"]
atlas = ExtResource("3")
region = Rect2(0, 0, 70, 70)

[sub_resource type="AtlasTexture" id="78"]
atlas = ExtResource("3")
region = Rect2(70, 0, 70, 70)

[sub_resource type="AtlasTexture" id="79"]
atlas = ExtResource("3")
region = Rect2(140, 0, 70, 70)

[sub_resource type="AtlasTexture" id="80"]
atlas = ExtResource("3")
region = Rect2(210, 0, 70, 70)

[sub_resource type="AtlasTexture" id="81"]
atlas = ExtResource("3")
region = Rect2(280, 0, 70, 70)

[sub_resource type="AtlasTexture" id="91"]
atlas = ExtResource("15")
region = Rect2(0, 0, 70, 70)

[sub_resource type="AtlasTexture" id="92"]
atlas = ExtResource("15")
region = Rect2(70, 0, 70, 70)

[sub_resource type="AtlasTexture" id="93"]
atlas = ExtResource("15")
region = Rect2(140, 0, 70, 70)

[sub_resource type="AtlasTexture" id="94"]
atlas = ExtResource("15")
region = Rect2(210, 0, 70, 70)

[sub_resource type="AtlasTexture" id="95"]
atlas = ExtResource("15")
region = Rect2(280, 0, 70, 70)

[sub_resource type="AtlasTexture" id="14"]
atlas = ExtResource("9")
region = Rect2(0, 0, 70, 70)

[sub_resource type="AtlasTexture" id="15"]
atlas = ExtResource("9")
region = Rect2(70, 0, 70, 70)

[sub_resource type="AtlasTexture" id="16"]
atlas = ExtResource("9")
region = Rect2(140, 0, 70, 70)

[sub_resource type="AtlasTexture" id="17"]
atlas = ExtResource("9")
region = Rect2(210, 0, 70, 70)

[sub_resource type="AtlasTexture" id="18"]
atlas = ExtResource("9")
region = Rect2(280, 0, 70, 70)

[sub_resource type="AtlasTexture" id="53"]
atlas = ExtResource("10")
region = Rect2(0, 0, 70, 70)

[sub_resource type="AtlasTexture" id="54"]
atlas = ExtResource("10")
region = Rect2(70, 0, 70, 70)

[sub_resource type="AtlasTexture" id="55"]
atlas = ExtResource("10")
region = Rect2(140, 0, 70, 70)

[sub_resource type="AtlasTexture" id="56"]
atlas = ExtResource("10")
region = Rect2(420, 0, 70, 70)

[sub_resource type="AtlasTexture" id="57"]
atlas = ExtResource("10")
region = Rect2(490, 0, 70, 70)

[sub_resource type="AtlasTexture" id="58"]
atlas = ExtResource("10")
region = Rect2(560, 0, 70, 70)

[sub_resource type="AtlasTexture" id="19"]
atlas = ExtResource("7")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="20"]
atlas = ExtResource("7")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="21"]
atlas = ExtResource("7")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="22"]
atlas = ExtResource("7")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="23"]
atlas = ExtResource("7")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="24"]
atlas = ExtResource("7")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="25"]
atlas = ExtResource("7")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="26"]
atlas = ExtResource("7")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="27"]
atlas = ExtResource("7")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="5"]
atlas = ExtResource("4")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="6"]
atlas = ExtResource("4")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="7"]
atlas = ExtResource("4")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="8"]
atlas = ExtResource("4")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="9"]
atlas = ExtResource("4")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="10"]
atlas = ExtResource("4")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="11"]
atlas = ExtResource("4")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="12"]
atlas = ExtResource("4")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="13"]
atlas = ExtResource("4")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="83"]
atlas = ExtResource("6")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="84"]
atlas = ExtResource("6")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="85"]
atlas = ExtResource("6")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="86"]
atlas = ExtResource("6")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="87"]
atlas = ExtResource("6")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="88"]
atlas = ExtResource("6")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="89"]
atlas = ExtResource("6")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="90"]
atlas = ExtResource("6")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="96"]
atlas = ExtResource("11")
region = Rect2(0, 0, 70, 70)

[sub_resource type="AtlasTexture" id="97"]
atlas = ExtResource("11")
region = Rect2(70, 0, 70, 70)

[sub_resource type="AtlasTexture" id="98"]
atlas = ExtResource("11")
region = Rect2(140, 0, 70, 70)

[sub_resource type="AtlasTexture" id="99"]
atlas = ExtResource("11")
region = Rect2(210, 0, 70, 70)

[sub_resource type="AtlasTexture" id="100"]
atlas = ExtResource("11")
region = Rect2(280, 0, 70, 70)

[sub_resource type="AtlasTexture" id="101"]
atlas = ExtResource("11")
region = Rect2(350, 0, 70, 70)

[sub_resource type="AtlasTexture" id="102"]
atlas = ExtResource("11")
region = Rect2(420, 0, 70, 70)

[sub_resource type="AtlasTexture" id="36"]
atlas = ExtResource("16")
region = Rect2(0, 0, 70, 70)

[sub_resource type="AtlasTexture" id="37"]
atlas = ExtResource("16")
region = Rect2(70, 0, 70, 70)

[sub_resource type="AtlasTexture" id="38"]
atlas = ExtResource("16")
region = Rect2(140, 0, 70, 70)

[sub_resource type="AtlasTexture" id="39"]
atlas = ExtResource("16")
region = Rect2(210, 0, 70, 70)

[sub_resource type="AtlasTexture" id="40"]
atlas = ExtResource("16")
region = Rect2(280, 0, 70, 70)

[sub_resource type="AtlasTexture" id="41"]
atlas = ExtResource("16")
region = Rect2(350, 0, 70, 70)

[sub_resource type="AtlasTexture" id="42"]
atlas = ExtResource("16")
region = Rect2(420, 0, 70, 70)

[sub_resource type="AtlasTexture" id="113"]
atlas = ExtResource("12")
region = Rect2(0, 0, 70, 70)

[sub_resource type="AtlasTexture" id="114"]
atlas = ExtResource("12")
region = Rect2(70, 0, 70, 70)

[sub_resource type="AtlasTexture" id="115"]
atlas = ExtResource("12")
region = Rect2(140, 0, 70, 70)

[sub_resource type="AtlasTexture" id="116"]
atlas = ExtResource("12")
region = Rect2(210, 0, 70, 70)

[sub_resource type="AtlasTexture" id="117"]
atlas = ExtResource("12")
region = Rect2(280, 0, 70, 70)

[sub_resource type="AtlasTexture" id="118"]
atlas = ExtResource("12")
region = Rect2(350, 0, 70, 70)

[sub_resource type="AtlasTexture" id="119"]
atlas = ExtResource("12")
region = Rect2(420, 0, 70, 70)

[sub_resource type="AtlasTexture" id="120"]
atlas = ExtResource("12")
region = Rect2(490, 0, 70, 70)

[sub_resource type="AtlasTexture" id="59"]
atlas = ExtResource("1")
region = Rect2(0, 0, 70, 70)

[sub_resource type="AtlasTexture" id="60"]
atlas = ExtResource("1")
region = Rect2(70, 0, 70, 70)

[sub_resource type="AtlasTexture" id="61"]
atlas = ExtResource("1")
region = Rect2(140, 0, 70, 70)

[sub_resource type="AtlasTexture" id="62"]
atlas = ExtResource("1")
region = Rect2(210, 0, 70, 70)

[sub_resource type="AtlasTexture" id="63"]
atlas = ExtResource("1")
region = Rect2(280, 0, 70, 70)

[sub_resource type="AtlasTexture" id="64"]
atlas = ExtResource("1")
region = Rect2(350, 0, 70, 70)

[sub_resource type="AtlasTexture" id="65"]
atlas = ExtResource("1")
region = Rect2(420, 0, 70, 70)

[sub_resource type="AtlasTexture" id="66"]
atlas = ExtResource("1")
region = Rect2(490, 0, 70, 70)

[sub_resource type="AtlasTexture" id="67"]
atlas = ExtResource("1")
region = Rect2(560, 0, 70, 70)

[sub_resource type="AtlasTexture" id="103"]
atlas = ExtResource("17")
region = Rect2(0, 0, 70, 70)

[sub_resource type="AtlasTexture" id="104"]
atlas = ExtResource("17")
region = Rect2(70, 0, 70, 70)

[sub_resource type="AtlasTexture" id="105"]
atlas = ExtResource("17")
region = Rect2(140, 0, 70, 70)

[sub_resource type="AtlasTexture" id="106"]
atlas = ExtResource("17")
region = Rect2(210, 0, 70, 70)

[sub_resource type="AtlasTexture" id="107"]
atlas = ExtResource("17")
region = Rect2(280, 0, 70, 70)

[sub_resource type="AtlasTexture" id="108"]
atlas = ExtResource("17")
region = Rect2(350, 0, 70, 70)

[sub_resource type="AtlasTexture" id="109"]
atlas = ExtResource("17")
region = Rect2(420, 0, 70, 70)

[sub_resource type="AtlasTexture" id="110"]
atlas = ExtResource("17")
region = Rect2(490, 0, 70, 70)

[sub_resource type="AtlasTexture" id="68"]
atlas = ExtResource("5")
region = Rect2(0, 0, 70, 70)

[sub_resource type="AtlasTexture" id="69"]
atlas = ExtResource("5")
region = Rect2(70, 0, 70, 70)

[sub_resource type="AtlasTexture" id="70"]
atlas = ExtResource("5")
region = Rect2(140, 0, 70, 70)

[sub_resource type="AtlasTexture" id="71"]
atlas = ExtResource("5")
region = Rect2(210, 0, 70, 70)

[sub_resource type="AtlasTexture" id="72"]
atlas = ExtResource("5")
region = Rect2(280, 0, 70, 70)

[sub_resource type="AtlasTexture" id="73"]
atlas = ExtResource("5")
region = Rect2(350, 0, 70, 70)

[sub_resource type="AtlasTexture" id="74"]
atlas = ExtResource("5")
region = Rect2(420, 0, 70, 70)

[sub_resource type="AtlasTexture" id="75"]
atlas = ExtResource("5")
region = Rect2(490, 0, 70, 70)

[sub_resource type="AtlasTexture" id="76"]
atlas = ExtResource("5")
region = Rect2(560, 0, 70, 70)

[sub_resource type="SpriteFrames" id="121"]
animations = [{
"frames": [ExtResource("8")],
"loop": true,
"name": &"block-0-1-hit",
"speed": 5.0
}, {
"frames": [ExtResource("8")],
"loop": true,
"name": &"block-0-2-hit",
"speed": 5.0
}, {
"frames": [ExtResource("8")],
"loop": true,
"name": &"block-0-die",
"speed": 5.0
}, {
"frames": [SubResource("28"), SubResource("29"), SubResource("30"), SubResource("31"), SubResource("32"), SubResource("33"), SubResource("34")],
"loop": true,
"name": &"block-1-1-hit",
"speed": 7.0
}, {
"frames": [SubResource("43"), SubResource("44"), SubResource("45"), SubResource("46"), SubResource("47"), SubResource("48"), SubResource("49"), SubResource("50"), SubResource("51")],
"loop": true,
"name": &"block-1-2-hit",
"speed": 9.0
}, {
"frames": [SubResource("77"), SubResource("78"), SubResource("79"), SubResource("80"), SubResource("81")],
"loop": true,
"name": &"block-1-die",
"speed": 5.0
}, {
"frames": [SubResource("91"), SubResource("92"), SubResource("93"), SubResource("94"), SubResource("95")],
"loop": true,
"name": &"block-2-1-hit",
"speed": 5.0
}, {
"frames": [SubResource("14"), SubResource("15"), SubResource("16"), SubResource("17"), SubResource("18")],
"loop": true,
"name": &"block-2-2-hit",
"speed": 5.0
}, {
"frames": [SubResource("53"), SubResource("54"), SubResource("55"), SubResource("56"), SubResource("57"), SubResource("58")],
"loop": true,
"name": &"block-2-die",
"speed": 6.0
}, {
"frames": [SubResource("19"), SubResource("20"), SubResource("21"), SubResource("22"), SubResource("23"), SubResource("24"), SubResource("25"), SubResource("26"), SubResource("27")],
"loop": true,
"name": &"block-3-1-hit",
"speed": 9.0
}, {
"frames": [SubResource("5"), SubResource("6"), SubResource("7"), SubResource("8"), SubResource("9"), SubResource("10"), SubResource("11"), SubResource("12"), SubResource("13")],
"loop": true,
"name": &"block-3-2-hit",
"speed": 9.0
}, {
"frames": [SubResource("83"), SubResource("84"), SubResource("85"), SubResource("86"), SubResource("87"), SubResource("88"), SubResource("89"), SubResource("90")],
"loop": true,
"name": &"block-3-die",
"speed": 8.0
}, {
"frames": [SubResource("96"), SubResource("97"), SubResource("98"), SubResource("99"), SubResource("100"), SubResource("101"), SubResource("102")],
"loop": true,
"name": &"block-4-1-hit",
"speed": 7.0
}, {
"frames": [SubResource("36"), SubResource("37"), SubResource("38"), SubResource("39"), SubResource("40"), SubResource("41"), SubResource("42")],
"loop": true,
"name": &"block-4-2-hit",
"speed": 7.0
}, {
"frames": [SubResource("113"), SubResource("114"), SubResource("115"), SubResource("116"), SubResource("117"), SubResource("118"), SubResource("119"), SubResource("120")],
"loop": true,
"name": &"block-4-die",
"speed": 8.0
}, {
"frames": [SubResource("59"), SubResource("60"), SubResource("61"), SubResource("62"), SubResource("63"), SubResource("64"), SubResource("65"), SubResource("66"), SubResource("67")],
"loop": true,
"name": &"block-5-1-hit",
"speed": 9.0
}, {
"frames": [SubResource("103"), SubResource("104"), SubResource("105"), SubResource("106"), SubResource("107"), SubResource("108"), SubResource("109"), SubResource("110")],
"loop": true,
"name": &"block-5-2-hit",
"speed": 8.0
}, {
"frames": [SubResource("68"), SubResource("69"), SubResource("70"), SubResource("71"), SubResource("72"), SubResource("73"), SubResource("74"), SubResource("75"), SubResource("76")],
"loop": true,
"name": &"block-5-die",
"speed": 9.0
}]

[sub_resource type="SegmentShape2D" id="1"]
a = Vector2(-24, -32)
b = Vector2(24, -32)

[sub_resource type="SegmentShape2D" id="2"]
a = Vector2(-24, 32)
b = Vector2(24, 32)

[sub_resource type="SegmentShape2D" id="3"]
a = Vector2(-32, -24)
b = Vector2(-32, 24)

[sub_resource type="SegmentShape2D" id="4"]
a = Vector2(32, -24)
b = Vector2(32, 24)

[node name="Block" type="AnimatedSprite2D" groups=["blocks"]]
frames = SubResource("121")
animation = &"block-0-2-hit"
script = ExtResource("2")

[node name="Up" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Up"]
shape = SubResource("1")

[node name="Down" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Down"]
shape = SubResource("2")

[node name="Left" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Left"]
shape = SubResource("3")

[node name="Right" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Right"]
shape = SubResource("4")

[connection signal="animation_finished" from="." to="." method="remove_at"]
[connection signal="area_entered" from="Up" to="." method="_on_Up_area_entered"]
[connection signal="area_entered" from="Down" to="." method="_on_Down_area_entered"]
[connection signal="area_entered" from="Left" to="." method="_on_Left_area_entered"]
[connection signal="area_entered" from="Right" to="." method="_on_Right_area_entered"]
